# lowkey

./: README.md
brand/: brand.md
docs/: docs.md  internal_tools_overview.md  iteration_ledger.md  recipe_inspector.md  shop_setup.md  taguchi_optimizer.md  webapp_plan.md
internal/: CMakeLists.txt  internal.md  ledger.txt
internal/csvs/: test.csv
internal/results/ledger/: ledger.txt
internal/results/taguchi/: test.csv
internal/src/: cost_calculator.cpp  cost_calculator.hpp  gui_ledger.cpp  gui_recipe.cpp  gui_taguchi.cpp  ledger.cpp  ledger.hpp  main.cpp  nutrition.cpp  nutrition.hpp  taguchi.cpp  taguchi.hpp
manufacturing/: manufacturing.md
recipes/: STABLE.json  recipes.md
recipes/lime_pie/: 2-10-26.json  2-3-26.json  STABLE.json
recipes/tropical/: 2-14-26.json  2-28-26.json  STABLE.json
webapp/: SETUP_ADMIN.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  schema.sql  webapp.md
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/app/admin/: actions.ts  layout.tsx
webapp/app/admin/batches/: page.tsx
webapp/app/admin/events/: page.tsx
webapp/app/batch/[id]/: page.tsx
webapp/app/scan/: page.tsx
webapp/app/shop/: page.tsx
webapp/app/shop/sign-in/: page.tsx
webapp/app/store-locator/: page.tsx
webapp/backend/: .env.example  package-lock.json  package.json
webapp/backend/migrations/: 001_create_initial_schema.sql  001_initial_schema.sql  001_schema.sql  002_sync_schema.sql  003_add_obj_model_path_to_products.sql  004_create_inventory_table.sql  run.js
webapp/backend/scripts/: seed-products.js
webapp/backend/src/: server.js
webapp/backend/src/middleware/: auth.js  (+1 more)
webapp/components/3d/: CanScene.tsx
webapp/components/shared/: BatchQRCode.tsx  ChangelogEntry.tsx  Footer.tsx  IngredientGraph.tsx  Navbar.tsx  QRScanner.tsx  ShopProductCard.tsx  SignOutButton.tsx
webapp/components/ui/: Button.tsx
webapp/frontend/: .env.example  package-lock.json  package.json
webapp/frontend/app/: layout.tsx  page.tsx
webapp/frontend/lib/: admin-guard.ts  auth.ts  cartService.ts  db.ts  recipes.ts  validation.ts
webapp/frontend/services/: batches.ts  events.ts  products.ts  stores.ts
webapp/frontend/types/: index.ts
webapp/lib/: admin-guard.ts  recipes.ts
webapp/types/: next-auth.d.ts
(+54 files in other folders)
